k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: june12-app-service
spec:
  type: ClusterIP
  selector:
    app: june12-app
  ports:
  - port: 80
    targetPort: 5000
